Adds MinIO support and mocks Cloudfront signing so Dance Party works.
The populators will produce files for the cdo-sound-library and
cdo-restricted buckets for safe development environment testing of the
Dance Party project type.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,9 @@ include:
 
   # Localstack support
   - path: ./docker/developers/docker-compose.localstack.yml
+
+  # MinIO (S3 emulation)
+  - path: ./docker/developers/docker-compose.minio.yml
+
+  # S3 Browser
+  - path: ./docker/developers/docker-compose.s3browser.yml
