--- a/docker/developers/.env
+++ b/docker/developers/.env
@@ -8,3 +8,6 @@ SELENIUM_EDGE_VERSION=105.0
 
 # Localstack version
 LOCALSTACK_VERSION=3.5.0
+
+# MinIO version
+MINIO_VERSION=RELEASE.2021-07-30T00-02-00Z
