--- a/docker/developers/docker-compose.hooks.yml
+++ b/docker/developers/docker-compose.hooks.yml
@@ -7,6 +7,7 @@ services:
       service: web
     environment:
       SILENT: 'true'
+    tty: false
     command: /bin/bash -l -c './docker/developers/run.sh ./tools/hooks/pre-commit'
 
   git-post-merge:
