--- a/apps/package.json
+++ b/apps/package.json
@@ -15,7 +15,7 @@
     "test": "./run-tests-in-parallel.sh",
     "test:unit": "jest",
     "test:integration": "grunt karma --testType=integration",
-    "test:storybook": "grunt karma --testType=storybook",
+    "test:storybook": "test-storybook",
     "clean": "grunt clean",
     "build": "DEV=1 yarn grunt build",
     "build:analyze": "ANALYZE_BUNDLE=1 DEV=1 yarn grunt build",
@@ -56,6 +56,7 @@
     "@storybook/csf-tools": "~8.1.11",
     "@storybook/react": "~8.1.11",
     "@storybook/react-webpack5": "~8.1.11",
+    "@storybook/test-runner": "~0.16.0",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.4.3",
     "@types/chai": "^4.3.5",
