--- a/apps/package.json
+++ b/apps/package.json
@@ -15,7 +15,8 @@
     "test": "./run-tests-in-parallel.sh",
     "test:unit": "jest",
     "test:integration": "grunt karma --testType=integration",
-    "test:storybook": "test-storybook",
+    "test:storybook": "test-storybook --url http://127.0.0.1:9001",
+    "test:storybook:ci": "npx playwright install --with-deps && concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"yarn storybook\" \"wait-on http://127.0.0.1:9001 && yarn test:storybook\"",
     "clean": "grunt clean",
     "build": "DEV=1 yarn grunt build",
     "build:analyze": "ANALYZE_BUNDLE=1 DEV=1 yarn grunt build",
@@ -83,6 +84,7 @@
     "chai-xml": "^0.3.2",
     "chalk": "^1.1.3",
     "circular-dependency-plugin": "^5.2.2",
+    "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
     "dedent": "^1.5.1",
@@ -165,6 +167,7 @@
     "typescript": "^5.5.3",
     "unminified-webpack-plugin": "^3.0.0",
     "unplugin": "^1.7.1",
+    "wait-on": "^7.2.0",
     "webpack": "^5.90.3",
     "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4",
