--- a/apps/package.json
+++ b/apps/package.json
@@ -16,7 +16,7 @@
     "test:unit": "jest",
     "test:integration": "grunt karma --testType=integration",
     "test:storybook": "test-storybook --url http://127.0.0.1:9001",
-    "test:storybook:ci": "npx playwright install --with-deps && concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"yarn storybook\" \"wait-on http://127.0.0.1:9001 && yarn test:storybook\"",
+    "test:storybook:ci": "./script/test-storybook.sh",
     "clean": "grunt clean",
     "build": "DEV=1 yarn grunt build",
     "build:analyze": "ANALYZE_BUNDLE=1 DEV=1 yarn grunt build",
@@ -118,6 +118,7 @@
     "grunt-sass": "3.1.0",
     "grunt-webpack": "^6.0.0",
     "history": "^2.0.1",
+    "http-server": "^14.1.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-canvas-mock": "^2.5.2",
