--- a/apps/package.json
+++ b/apps/package.json
@@ -218,6 +218,7 @@
     "@microsoft/immersive-reader-sdk": "^1.1.0",
     "@react-bootstrap/pagination": "^1.0.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@selectize/selectize": "^0.15.2",
     "@types/htmlhint": "^1.1.5",
     "@types/papaparse": "^5.3.14",
     "@types/qrcode.react": "^1.0.5",
@@ -327,7 +328,6 @@
     "sanitize-html": "^1.11.3",
     "save-csv": "^4.0.6",
     "seedrandom": "2.4.2",
-    "selectize": "^0.12.4",
     "slate": "^0.81.0",
     "slate-react": "^0.81.0",
     "sortabular": "^1.6.0",
