--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -36,8 +36,9 @@
 # infrastructure #
 ##################
 
-/.github/                   @code-dot-org/infrastructure
-/aws/                       @code-dot-org/infrastructure
-/cookbooks/                 @code-dot-org/infrastructure
-.drone.yml                  @code-dot-org/infrastructure
-.ruby-version               @code-dot-org/infrastructure
+/.github/                       @code-dot-org/infrastructure
+/aws/                           @code-dot-org/infrastructure
+/cookbooks/                     @code-dot-org/infrastructure
+/docker/continuous-integration/ @code-dot-org/infrastructure
+.drone.yml                      @code-dot-org/infrastructure
+.ruby-version                   @code-dot-org/infrastructure
