--- a/docker/ui-tests-compose.yml
+++ b/docker/ui-tests-compose.yml
@@ -24,7 +24,7 @@
 version: "3"
 services:
   site:
-    # TODO: switch to codedotorg/cdo-drone or other new image
+    # TODO: switch to codedotorg/cdo-ci or other new image
     image: codedotorg/code-dot-org:1.9.3
     user: ${FIXUID:-1000}:${FIXGID:-1000}
     volumes:
