--- a/apps/package.json
+++ b/apps/package.json
@@ -56,6 +56,7 @@
     "@storybook/csf-tools": "~8.1.11",
     "@storybook/react": "~8.1.11",
     "@storybook/react-webpack5": "~8.1.11",
+    "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.4.3",
     "@types/chai": "^4.3.5",
