--- a/apps/package.json
+++ b/apps/package.json
@@ -52,11 +52,13 @@
     "@pyodide/webpack-plugin": "^1.3.2",
     "@storybook/addon-a11y": "~8.1.11",
     "@storybook/addon-essentials": "~8.1.11",
+    "@storybook/addon-interactions": "~8.1.11",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.0",
     "@storybook/core-common": "~8.1.11",
     "@storybook/csf-tools": "~8.1.11",
     "@storybook/react": "~8.1.11",
     "@storybook/react-webpack5": "~8.1.11",
+    "@storybook/test": "~8.1.11",
     "@storybook/test-runner": "~0.16.0",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.4.3",
@@ -140,6 +142,7 @@
     "mocha": "^10.6.0",
     "mock-firmata": "0.2.0",
     "node-js-marker-clusterer": "^1.0.0",
+    "os-browserify": "^0.3.0",
     "prettier": "2.8.7",
     "process": "^0.11.10",
     "progress-bar-webpack-plugin": "^2.1.0",
@@ -163,6 +166,7 @@
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "ts-sinon": "^2.0.2",
+    "tty-browserify": "^0.0.1",
     "typescript": "^5.5.3",
     "unminified-webpack-plugin": "^3.0.0",
     "unplugin": "^1.7.1",
