--- a/apps/package.json
+++ b/apps/package.json
@@ -266,6 +266,7 @@
     "moment": "^2.29.4",
     "object-fit-images": "^3.2.3",
     "pa11y-ci": "^2.3.0",
+    "papaparse": "^5.4.1",
     "path-browserify": "^1.0.1",
     "pepjs": "^0.4.3",
     "pixelmatch": "^5.2.0",
@@ -297,7 +298,6 @@
     "react-motion": "^0.5.2",
     "react-onclickoutside": "~5.11.1",
     "react-paginate": "^6.3.0",
-    "react-papaparse": "^4.4.0",
     "react-pointable": "^1.1.1",
     "react-portal": "^4.2.1",
     "react-redux": "~8.0.5",
